# nonebot-plugin-mcserver-status

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/nonebot_plugin_mcserver_status/: __init__.py  checker.py
tests/: plugin_test.py
